--- a/presentation/root.css
+++ b/presentation/root.css
@@ -3,6 +3,11 @@ body {
   font-size: 100%;
 }
 
+.wrapper {
+  width: 500px;
+  height: 1000px;
+}
+
 .status {
   /* avoid an excessively wide status text */
   white-space: pre;
